--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,13 @@ charset-normalizer==2.0.9
 click==8.0.3
 configparser==5.2.0
 fastapi==0.70.1
+greenlet==1.1.2
 h11==0.12.0
 idna==3.3
 pydantic==1.9.0
 requests==2.26.0
 sniffio==1.2.0
+SQLAlchemy==1.4.29
 starlette==0.16.0
 typing==3.7.4.3
 typing-extensions==4.0.1
